2019-02-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Implement read from bit-field, literal write to bit-field.
	* src/pdk/ralloc2.cc:
	  Improve handling of p wrt. pointer read / write in register allocation.

2019-02-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix signed comparison by 0.
	* Makefile.in,
	  configure,
	  configure.ac,
	  src/pdk/main.c,
	  sdas/aspdk,
	  sdas/aspdk14:
	  Assembler rename, based on patch by Nicolas Lesser.

2019-02-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c: fix bug #2863

2019-02-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix early return from interrupt.

2019-02-03 Philipp Klaus Krause <pkk AT spth.de>

	* doc/Makefile.in:
	  Fix dependencies.

2019-02-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c:
	  Fix a pointer initalization issue.
	* src/pdk/main.c:
	  Save a word in stack-pointer setup.

2019-02-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c,
	  src/SDCCglue.h,
	  src/ds390/gen.c,
	  src/hc08/gen.c,
	  src/mcs51/gen.c:
	  Use ret k for constant data.

2019-02-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: add support for ez80_z80

2019-01-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCasm.c,
	  src/SDCCasm.h,
	  src/pdk/main.c:
	  Use ret k for constant data bytes.

2019-01-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/z80.src/ez80.cc: add needed header for int8_t

2019-01-30 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Clarify documentation on library path options.

2019-01-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Document bug #2858 workaround.

2019-01-27 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk/pdkmch.c:
	  Fix idxm, patch by Tim (cpldcpu).
	* device/lib/pdk14/Makefile.in:
	  Use generic memcpy(), unsigned 8 x 8 -> 16 multiplication and unsigned division for pdk14.