@@ -1,3 +1,8 @@
+2019-02-06 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/gen.c:
+	  Implement write of non-literal to bit-field.
+
 2019-02-05 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/pdk/gen.c:
